# nmpt_saliency_ros

./: CMakeLists.txt  nodelet.xml  package.xml
cfg/: nmpt_saliency.cfg
include/nmpt_saliency/: nodelet.h
launch/: nodelet.launch
src/: nodelet.cpp
